style changes to fix command bar at the top and position changes in modelCreate component to overflow only the content and stick the title to the top and action buttons at the bottom, also exposed a method in ModelCreate functional component to access new model state variable outside-e.g. when click on view dtdl or download

--- a/src/Cards/CompositeCards/ADTModelListWithModelDetails/Consume/ADTModelListWithModelDetailsCard.scss
+++ b/src/Cards/CompositeCards/ADTModelListWithModelDetails/Consume/ADTModelListWithModelDetailsCard.scss
@@ -2,13 +2,8 @@
     width: 100%;
     height: 100%;
 
-    .cb-base-composite-card-wrapper {
+    .cb-base-composite-card {
         background-color: var(--cb-color-bg-card);
-    }
-
-    .cb-base-composite-card-content {
-        top: 0;
-        padding: 0 20px;
     }
 
     .cb-base-composite-card-item:nth-child(1) {
@@ -16,8 +11,7 @@
     }
 
     .cb-mbcard-list {
-        height: 600px;
-        padding-top: 20px;
+        height: 100%;
         width: 300px;
 
         .cb-base-card-content {
@@ -29,16 +23,18 @@
         }
     }
 
-    .cb-mbcard-form {
-        padding-top: 20px;
-
-        .cb-modelcreate-container {
-            padding-top: 12px;
-        }
-    }
-
     .cb-commandBar {
         margin-left: -32px;
         border: 1px solid var(--cb-color-bg-canvas-inset);
+    }
+
+    .cb-mbcard-form {
+        height: 100%;
+
+        .cb-modelcreate-container {
+            padding-top: 12px;
+            height: calc(100% - 46px);
+            overflow: auto;
+        }
     }
 }
